# agent-gui-runtime

./: .gitattributes  .gitignore  ACCURACY_EVALUATION_STANDARD.md  ACTION_PATH_GRAPH_SPEC.zh-CN.md  AGENTS.md  AGENT_API_WORKFLOW.md  AGENT_ONBOARDING.md  API_FIELD_REFERENCE.zh-CN.md  KNOWLEDGE_BASE.md  LEARNING_MODE_PLAN.zh-CN.md  PROJECT_CONTEXT.md  PROJECT_HANDOFF_CONVERSATION_HISTORY.zh-CN.md  PROJECT_STRUCTURE.md  README.en.md  README.md  RULES.md  RUNTIME_STATE_GRAPH.md  RUNTIME_STATE_GRAPH.zh-CN.md  SEEK_MVP_PLAN.md  SETTINGS_PANEL_FEATURE_REFERENCE.zh-CN.md  WORKLOG.md  package.json  pyproject.toml  run_click_text_regression.ps1  start_test_panel.bat
.learnings/: FEATURE_REQUESTS.md
app/: main.py
artifacts/: execute_start_dry_run_response.json
configs/: app_catalog.json  mousetester_eval_cases.json  screen_inventory_benchmark_cases.json  settings_panel.json  understanding_model_benchmark_cases.json  vision.json
docs/: AGENT_EXECUTION_PROTOCOL.md  AGENT_LEARN_MODE_TUTORIAL.md  AGENT_PROMPT_TEMPLATE.zh-CN.md  AGENT_TRACE_DEBUG_GUIDE.md  GUI_AGENT_RUNTIME_ARCHITECTURE.zh-CN.md  LEARN_EXECUTE_MVP_CHECKPOINT.zh-CN.md  LEARN_PATH_GRAPH_PANEL_REDESIGN.zh-CN.md  PANEL_LEARN_EXECUTE_WORKFLOW.zh-CN.md  VISUAL_ASSET_LEARNING_MODE.zh-CN.md
modules/: __init__.py
scripts/: agent_trace_digest.py  artifact_replay_regression_report.py  benchmark_screen_inventory.py  benchmark_understanding_models.py  benchmark_vista_scaling.py  candidate_profile_from_cv.py  evaluate_mousetester_traces.py  execute_smoke_runner.py  learn_execute_checkpoint_report.py  learn_sample_readiness_gate.py  record_uia_smoke.py  seek_application_final_review_audit.py  seek_application_flow_replay_report.py  seek_debug_export_application_fill_record.py  seek_debug_step_runner.py  seek_demo_goal_completion_audit.py  seek_demo_readiness_report.py  seek_export_application_flow_artifact.py  seek_export_learn_artifacts.py  seek_long_read_benchmark_report.py  seek_mvp_report_audit.py  seek_mvp_run_audit.py  seek_mvp_traversal_runner.py  seek_profile_readiness.py  seek_speed_demo_runner.py  serve_internvl3_5_server.ps1  (+10 more)
(+581 files in other folders)
