[project]
name = "agent-gui-runtime"
version = "0.1.0"
description = "Local Windows GUI automation runtime for AI agents"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2,<3",
  "pywinauto",
  "pywin32",
  "mss",
  "opencv-python",
  "numpy",
  "paddleocr",
  "rapidocr-onnxruntime",
  "pillow",
  "loguru",
  "psutil",
  "paddlepaddle==3.2.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
  "pytest>=8,<9",
]
vista = [
  "accelerate",
  "safetensors",
  "torch==2.12.0+cu130",
  "torchvision==0.27.0+cu130",
  "transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
